🌐 i18n: Added translation for credit note sidebar text

--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -1194,6 +1194,7 @@
       "quotes": "Angebote",
       "invoices": "Rechnungen",
       "receipts": "Belege",
+      "creditNotes": "Gutschriften",
       "clients": "Kunden",
       "settings": "Einstellungen"
     },
